# json-to-ppt

./: .gitignore  LICENSE  README.md  README.zh-CN.md  SECURITY.md  gui.py  main.py  ppt.schema.json  pyproject.toml
.github/: copilot-instructions.md  dependabot.yml
demo/: example.json  example2.json
docs/: API_SPEC.md  CODE_OF_CONDUCT.md  COMMERCIAL_STRATEGY.md  CONTRIBUTING.md  PROMPT_FOR_LLM.md  TEMPLATE_PACKAGING.md
examples/: minimal.json
