[project]
name = "json2ppt"
version = "0.1.1"
description = "Declarative JSON to PowerPoint generator (deterministic, LLM-friendly)."
requires-python = ">=3.10"
dependencies = [
	"python-pptx>=0.6.23,<1.1.0",
	"requests>=2.31.0,<3.0.0",
	"pillow>=10.2.0,<12.0.0",
]

[project.optional-dependencies]
validate = ["jsonschema>=4.23.0,<5.0.0"]
dev = [
  "jsonschema>=4.23.0,<5.0.0",
  "pytest>=8.2.0,<9.0.0",
  "ruff>=0.5.0,<0.6.0"
]

[project.urls]
Homepage = "https://github.com/your-org/json-to-ppt"
Issues = "https://github.com/your-org/json-to-ppt/issues"
